testing/tests/ui/typo_in_keyword.stderr
error: expected `endfor` to terminate `for` node, found `endfo`
 --> <source attribute>:1:26
       "endfo%}\n1234567890123456789012345678901234567890"
 --> tests/ui/typo_in_keyword.rs:5:14
  |
5 |     source = "{%for i in 1..=10%}{{i}}{%endfo%}\n1234567890123456789012345678901234567890",
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
